# MassEntity

./: README.ja.md  README.md  pyproject.toml  run_tests.py  run_tests.sh
MassEntityCore/: MSDataset.py  PeakCondition.py  PeakEntry.py  PeakSeries.py  SpecCondition.py  SpectrumPeaks.py  SpectrumRecord.py  __init__.py  test_normalize.py
MassEntityIO/: ItemParser.py  msp.py
msentity/: __init__.py
msentity/core/: MSDataset.py  PeakCondition.py  PeakEntry.py  PeakSeries.py  SpecCondition.py
msentity/io/: IOContext.py  ItemParser.py  __init__.py  mgf.py  msp copy.py  msp.py  prepare_ms_data.py
msentity/utils/: annotate.py  inspect.py  spectrum_similarity.py
tests/: TestMSDataset.py  TestPeakSeries.py
tests/TestMassEntityCore/: TestMSDataset.py  TestMSDatasetChunkedHDF5.py  TestPeakCondition.py  TestPeakSeries.py  TestSpecCondition.py  TestSpectrumPeaks.py  TestSpectrumRecord.py  benchmark_peakseries.py
tests/TestMassEntityIO/: TestPrepareMsData.py  TestReadMGF.py  TestReadMSP.py
tests/TestMassEntityIO/dummy_files/: test_dummy.msp  test_dummy_with_error.msp
tests/TestUtils/: TestAnnotate.py  TestInspect.py  TestSpectrumSimilarity.py  TestSplash.py
tests/dummy_files/: test_dummy.hdf5  test_dummy.mgf  test_dummy_with_error.mgf  test_dummy_with_peak_meta.mgf  test_dummy_with_peak_meta.msp  test_dummy_with_quoted.mgf  test_dummy_with_quoted.msp
utils/: splash.py
