[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "msentity"
version = "0.1.0"
description = "Core data structures and utilities for mass spectrometry analysis"
authors = [
    { name = "Motohiro Ogawa" }
]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.8"
dependencies = [
    "torch",
    "numpy",
    "pandas",
    "h5py",
    "pyarrow"
]

[tool.setuptools.packages.find]
where = ["msentity"]

[tool.pytest.ini_options]
testpaths = ["tests"]
